--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,9 @@ body{
 }
 
 #svg-canvas{
-    /*width: 100%;
-    height: 100%
-    position: fixed;*/
+    width: 100%;
+    height: 100%;
+    position: fixed;
     background-color: #D8D8D8;
 }
 
